# agentic-python-template

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  init.py  pyproject.toml
.claude/: DDD.md  settings.json
.claude/designs/: _template.md
.claude/hooks/: pre-edit-reuse.sh
.github/workflows/: ci.yml
_service-template/: pyproject.toml
scripts/: check_tdd.py
